[package]
name = "micro-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
egui = "0.26.2"
glam = "0.25.0"
kira = { git = "https://github.com/tesselode/kira", rev = "88c82d7" }
micro = { git = "https://github.com/tesselode/micro", rev = "af92d89" }
palette = "0.7.4"
rfd = "0.14.0"

[features]
sdl2_bundled = ["micro/sdl2_bundled"]

[profile.dev.package."*"]
opt-level = 3
