[package]
name = "micro-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_more = { version = "1.0.0", features = ["index", "index_mut", "into_iterator"] }
kira = "0.9.4"
micro = { git = "https://github.com/tesselode/micro", rev = "0a1114d" }
rfd = "0.14.0"

[features]
sdl2_bundled = ["micro/sdl2_bundled"]

[profile.dev.package."*"]
opt-level = 3
